--- a/src/remarkable-ui/shared/CardHeader/index.module.css
+++ b/src/remarkable-ui/shared/CardHeader/index.module.css
@@ -5,13 +5,13 @@
     justify-content: space-between;
     align-items: flex-start;
     align-self: stretch;
-    gap: 16px;
+    gap: var(--padding-1);
 }
 
 .content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 16px;
+    gap: var(--padding-4);
     flex: 1 0 0;
 }
