--- a/src/remarkable-ui/shared/MessageContainer/index.module.css
+++ b/src/remarkable-ui/shared/MessageContainer/index.module.css
@@ -11,11 +11,11 @@
     text-align: center;
     flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: var(--padding-3);
 }
 
 .titleText {
-    font-size: 14px;
+    font-size: var(--text-xs);
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
