--- a/src/remarkable-ui/shared/MessageContainer/index.module.css
+++ b/src/remarkable-ui/shared/MessageContainer/index.module.css
@@ -15,7 +15,7 @@
 }
 
 .titleText {
-    font-size: var(--text-xs);
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
