--- a/src/remarkable-ui/shared/Dropdown/index.module.css
+++ b/src/remarkable-ui/shared/Dropdown/index.module.css
@@ -31,6 +31,8 @@
     max-width: 256px;
     text-wrap: nowrap;
     color: var(--foreground-default);
+    max-height: var(--height-128);
+    overflow: auto;
 }
 
 .dropdownMenu.rightAligned {
