--- a/src/remarkable-ui/shared/ChartContainer/index.module.css
+++ b/src/remarkable-ui/shared/ChartContainer/index.module.css
@@ -1,12 +1,13 @@
 .chartContainer {
     width: 100%;
     height: 100%;
-    position: relative;
     overflow: hidden;
 }
 
-.chartContainerInner {
+.chartInnerContainer {
     height: 100%;
     width: 100%;
+    min-height: 5px;
     overflow: auto;
+    position: relative;
 }
