--- a/src/remarkable-ui/shared/CardHeader/index.module.css
+++ b/src/remarkable-ui/shared/CardHeader/index.module.css
@@ -5,13 +5,13 @@
     justify-content: space-between;
     align-items: flex-start;
     align-self: stretch;
-    gap: var(--padding-1);
+    gap: var(--card-header-gap);
 }
 
 .content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--padding-4);
+    gap: var(--surface-header-content-gap);
     flex: 1 0 0;
 }
