--- a/src/remarkable-ui/shared/MessageContainer/index.module.css
+++ b/src/remarkable-ui/shared/MessageContainer/index.module.css
@@ -11,19 +11,31 @@
     text-align: center;
     flex-direction: column;
     align-items: center;
-    gap: var(--padding-3);
+    gap: var(--card-message-gap);
+    color: var(--card-message-default-color);
 }
 
 .titleText {
-    font-size: 14px;
+    font-size: var(--card-message-size);
     font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
+    font-weight: var(--card-message-weight);
+    line-height: var(--card-message-line-height);
 }
 
 .bodyText {
-    font-size: 14px;
+    font-size: var(--card-message-size);
     font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
+    font-weight: var(--card-message-weight);
+    line-height: var(--card-message-line-height);
 }
+
+.error {
+    color: var(--card-error-color);
+}
+
+.icon {
+    color: inherit;
+    height: var(--card-message-icon-height);
+    width: var(--card-message-icon-width);
+}
+
