--- a/src/remarkable-ui/shared/MessageContainer/index.module.css
+++ b/src/remarkable-ui/shared/MessageContainer/index.module.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;   
+    font-family: var(--card-message-family);
 }
 
 .message {
