--- a/src/remarkable-ui/shared/SkeletonLoader/index.module.css
+++ b/src/remarkable-ui/shared/SkeletonLoader/index.module.css
@@ -1,14 +1,14 @@
 .skeleton {
-    width: 100%;
-    height: 100%;
+    animation: shimmer 1.5s infinite;
     background: linear-gradient(
         90deg, rgba(237, 237, 241, 0.4) 29%,
         rgba(210, 210, 213, 0.4) 46.21%,
         rgba(237, 237, 241, 0.4) 78.5%
     );
     background-size: 200% 100%;
-    animation: shimmer 1.5s infinite 
-  }
+    height: 100%;
+    width: 100%;
+}
   
 @keyframes shimmer {
     0% {
@@ -17,4 +17,4 @@
     100% {
       background-position: -100%;
     }
-  }
+}
