interactivity added to pie charts text-align variables added getStyle function significantly updated to improve performance Custom format functions added to theme

--- a/src/remarkable-ui/shared/Description/index.module.css
+++ b/src/remarkable-ui/shared/Description/index.module.css
@@ -5,5 +5,6 @@
     font-style: normal;
     font-weight: var(--card-subtitle-weight);
     line-height: var(--card-subtitle-line-height);
+    text-align: var(--card-subtitle-align);
     width: 100%;
 }
