--- a/src/remarkable-ui/shared/Title/index.module.css
+++ b/src/remarkable-ui/shared/Title/index.module.css
@@ -5,5 +5,6 @@
     font-style: normal;
     font-weight: var(--card-title-weight);
     line-height: var(--card-title-line-height);
+    text-align: var(--card-title-align);
     width: 100%;
 }
