--- a/src/remarkable-ui/shared/CardHeader/index.module.css
+++ b/src/remarkable-ui/shared/CardHeader/index.module.css
@@ -8,10 +8,14 @@
     width: 100%;
 }
 
-.content {
+.mainContent {
     align-items: flex-start;
     display: flex;
     flex: 1 0 0;
     flex-direction: column;
     gap: var(--card-header-content-gap);
+}
+
+.rightContent {
+    height: 32px; /* Matches the height of the export button, to prevent layout shift */
 }
