Small card refactor to support chart header and footer (based on customer feedback to include things like summaries above the chart)

--- a/src/remarkable-ui/shared/ChartContainer/index.module.css
+++ b/src/remarkable-ui/shared/ChartContainer/index.module.css
@@ -1,3 +1,10 @@
+.outerContainer {
+    align-self: stretch;
+    flex: 1;
+    min-height: 1px;
+    overflow: hidden;
+}
+
 .chartContainer {
     height: 100%;
     overflow: hidden;
