--- a/src/remarkable-ui/shared/CardContent/index.module.css
+++ b/src/remarkable-ui/shared/CardContent/index.module.css
@@ -1,6 +1,7 @@
 .content {
-    align-self: stretch;
-    flex: 1;
-    min-height: 1px;
-    overflow: hidden;
-}
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}   
