--- a/src/remarkable-ui/shared/Surface/index.module.css
+++ b/src/remarkable-ui/shared/Surface/index.module.css
@@ -1,4 +1,4 @@
-.card {
+.surface {
     align-items: center;
     background: var(--surface-background);
     border-radius: var(--surface-radius);
