Dataset and dimension inputs moved to commonChartInputs and imported Default height and width added Default limit of 200 added to dropdown Default placeholder removed Dropdown search styling corrected

--- a/src/remarkable-ui/shared/Dropdown/index.module.css
+++ b/src/remarkable-ui/shared/Dropdown/index.module.css
@@ -116,6 +116,9 @@
     background-color: transparent;
     display: flex;
     flex: 1;
+    font-family: var(--li-label-family);
+    font-size: var(--li-label-size);
+    font-weight: var(--li-label-weight);
 }
 
 .searchInput:hover, .searchInput:focus-within, .searchInputActive {
