--- a/src/remarkable-ui/shared/Surface/index.module.css
+++ b/src/remarkable-ui/shared/Surface/index.module.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    font-family: var(--surface-font-family);
     gap: var(--surface-gap);
     height: 100%;
     padding: var(--surface-padding);
