prefix all variable names with '--em-' In multi-select dropdown, show applied filters instead of selected but unapplied filters

--- a/src/remarkable-ui/shared/DropdownButton/index.module.css
+++ b/src/remarkable-ui/shared/DropdownButton/index.module.css
@@ -1,37 +1,37 @@
 .dropdownButton {
 	align-items: center;
-	background-color: var(--dropdown-button-background);
-	border-radius: var(--dropdown-button-border-radius);
-	border: var(--dropdown-button-border);
+	background-color: var(--em-dropdown-button-background);
+	border-radius: var(--em-dropdown-button-border-radius);
+	border: var(--em-dropdown-button-border);
 	box-sizing: border-box;
-	color: var(--dropdown-button-color);
+	color: var(--em-dropdown-button-color);
 	cursor: pointer;
 	display: flex;
 	flex-direction: row;
-	font-family: var(--dropdown-button-font-family);
-	font-size: var(--dropdown-button-font-size);
-	font-weight: var(--dropdown-button-font-weight);
-	gap: var(--dropdown-button-gap);
-	height: var(--dropdown-button-height);
+	font-family: var(--em-dropdown-button-font-family);
+	font-size: var(--em-dropdown-button-font-size);
+	font-weight: var(--em-dropdown-button-font-weight);
+	gap: var(--em-dropdown-button-gap);
+	height: var(--em-dropdown-button-height);
 	justify-content: space-between;
-	padding: var(--dropdown-button-padding);
+	padding: var(--em-dropdown-button-padding);
 	width: 100%;
 }
 
 .dropdownButton:hover {
-	background-color: var(--dropdown-button-hover-background);
-	border: var(--dropdown-button-hover-border);
+	background-color: var(--em-dropdown-button-hover-background);
+	border: var(--em-dropdown-button-hover-border);
 }
 
 .dropdownButton:pressed {
-	background-color: var(--dropdown-button-pressed-background);
-	border: var(--dropdown-button-pressed-border);
+	background-color: var(--em-dropdown-button-pressed-background);
+	border: var(--em-dropdown-button-pressed-border);
 }
 
 .dropdownButtonText {
 	display: flex;
 	align-items: center;
-	gap: var(--dropdown-button-gap);
+	gap: var(--em-dropdown-button-gap);
 	flex: 1;
 	min-width: 0;
 }
