--- a/src/remarkable-ui/shared/PrimaryButton/index.module.css
+++ b/src/remarkable-ui/shared/PrimaryButton/index.module.css
@@ -1,18 +1,18 @@
 .btn {
     align-items: center;
     align-items: center;
-    background-color: var(--primary-btn-background-default);
-    border-radius: var(--primary-btn-border-radius);
-    border: var(--primary-btn-border);
-    color: var(--primary-btn-text-default);
+    background-color: var(--em-primary-btn-background-default);
+    border-radius: var(--em-primary-btn-border-radius);
+    border: var(--em-primary-btn-border);
+    color: var(--em-primary-btn-text-default);
     cursor: pointer;
     display: flex;
-    font-family: var(--font-default);
-    font-size: var(--primary-btn-font-size);
-    font-weight: var(--primary-btn-font-weight);
-    padding: var(--primary-btn-padding);
+    font-family: var(--em-font-default);
+    font-size: var(--em-primary-btn-font-size);
+    font-weight: var(--em-primary-btn-font-weight);
+    padding: var(--em-primary-btn-padding);
     transition: background-color 0.2s ease;
-    gap: var(--primary-btn-gap);
+    gap: var(--em-primary-btn-gap);
 }
 
 .icon {
@@ -29,19 +29,19 @@
   }
   
   .btn:hover {
-    background-color: var(--primary-btn-background-hover);
-    color: var(--primary-btn-text-hover);
+    background-color: var(--em-primary-btn-background-hover);
+    color: var(--em-primary-btn-text-hover);
   }
   
   .btn:disabled {
-    background-color: var(--primary-btn-background-disabled);
-    color: var(--primary-btn-text-disabled);
+    background-color: var(--em-primary-btn-background-disabled);
+    color: var(--em-primary-btn-text-disabled);
     cursor: not-allowed;
   }
   
   .btn:pressed {
-    background-color: var(--primary-btn-background-pressed);
-    color: var(--primary-btn-text-pressed);
+    background-color: var(--em-primary-btn-background-pressed);
+    color: var(--em-primary-btn-text-pressed);
   }
 
   .fullWidth {
