--- a/src/remarkable-ui/shared/BaseDropdown/index.module.css
+++ b/src/remarkable-ui/shared/BaseDropdown/index.module.css
@@ -10,21 +10,21 @@
 
 .dropdownMenu {
   align-items: flex-start;
-  background: var(--dropdown-background);
-  border-radius: var(--dropdown-border-radius);
+  background: var(--em-dropdown-background);
+  border-radius: var(--em-dropdown-border-radius);
   box-shadow: 0px 1px 40px 0px rgba(33, 33, 41, 0.25);
-  color: var(--dropdown-color);
+  color: var(--em-dropdown-color);
   display: flex;
   flex-direction: column;
-  gap: var(--dropdown-gap);
+  gap: var(--em-dropdown-gap);
   left: 0;
   margin-top: 2px;
-  max-height: var(--dropdown-max-height);
+  max-height: var(--em-dropdown-max-height);
   max-width: 300px;
   min-width: 160px;
   opacity: 0;
   overflow: auto;
-  padding: 0 var(--dropdown-padding) 0 var(--dropdown-padding);
+  padding: 0 var(--em-dropdown-padding) 0 var(--em-dropdown-padding);
   position: absolute;
   text-wrap: nowrap;
   top: 100%;
@@ -42,64 +42,64 @@
 }
 
 .dropdownItem {
-  border-radius: var(--li-radius);
+  border-radius: var(--em-li-radius);
   box-sizing: border-box;
-  color: var(--li-label-color-default);
+  color: var(--em-li-label-color-default);
   cursor: pointer;
   display: flex;
-  font-family: var(--li-label-family);
-  font-size: var(--li-label-size);
+  font-family: var(--em-li-label-family);
+  font-size: var(--em-li-label-size);
   font-style: normal;
-  font-weight: var(--li-label-weight);
-  height: var(--li-height);
-  line-height: var(--li-label-line-height);
+  font-weight: var(--em-li-label-weight);
+  height: var(--em-li-height);
+  line-height: var(--em-li-label-line-height);
   transition: background-color 0.2s ease;
   width: 100%;
 }
 
 .dropdownItem:first-child {
-  margin-top: var(--dropdown-padding);
+  margin-top: var(--em-dropdown-padding);
 }
 
 .dropdownItem:last-child {
-  margin-bottom: var(--dropdown-padding);
+  margin-bottom: var(--em-dropdown-padding);
 }
 
 .dropdownItemInnerDefault {
   display: flex;
   align-items: center;
-  gap: var(--li-gap);
-  padding: var(--li-padding);
+  gap: var(--em-li-gap);
+  padding: var(--em-li-padding);
   width: 100%;
 }
 
 .dropdownItem .itemText {
   flex: 1;
   overflow: hidden;
-  padding: var(--li-label-padding);
+  padding: var(--em-li-label-padding);
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .dropdownItem:hover {
-  background-color: var(--background-default);
-  color: var(--li-label-color-hover);
+  background-color: var(--em-background-default);
+  color: var(--em-li-label-color-hover);
 }
 
 .dropdownItem:pressed {
-  background-color: var(--background-light);
-  color: var(--li-label-color-pressed);
+  background-color: var(--em-background-light);
+  color: var(--em-li-label-color-pressed);
 }
 
 .dropdownItemIcon {
-  height: var(--li-icn-height);
-  width: var(--li-icn-width);
+  height: var(--em-li-icn-height);
+  width: var(--em-li-icn-width);
 }
 
 .searchInputContainer,
 .applyButtonContainer {
-  background: var(--dropdown-background);
-  padding: var(--dropdown-padding) 0px var(--dropdown-padding) 0px;
+  background: var(--em-dropdown-background);
+  padding: var(--em-dropdown-padding) 0px var(--em-dropdown-padding) 0px;
   position: sticky;
   top: 0px;
   width: 100%;
@@ -115,14 +115,14 @@
 
 .searchInput {
   align-items: center;
-  background-color: var(--li-search-background);
-  border-radius: var(--li-radius);
+  background-color: var(--em-li-search-background);
+  border-radius: var(--em-li-radius);
   box-sizing: border-box;
   display: flex;
-  gap: var(--li-gap);
+  gap: var(--em-li-gap);
   height: 32px;
   justify-content: space-between;
-  padding: var(--li-padding);
+  padding: var(--em-li-padding);
   width: 100%;
 }
 
@@ -132,21 +132,21 @@
   background-color: transparent;
   display: flex;
   flex: 1;
-  color: var(--li-label-color-default);
-  font-family: var(--li-label-family);
-  font-size: var(--li-label-size);
-  font-weight: var(--li-label-weight);
+  color: var(--em-li-label-color-default);
+  font-family: var(--em-li-label-family);
+  font-size: var(--em-li-label-size);
+  font-weight: var(--em-li-label-weight);
 }
 
 .searchInput:hover,
 .searchInput:focus-within,
 .searchInputActive {
-  background-color: var(--li-search-background-hover);
+  background-color: var(--em-li-search-background-hover);
 }
 
 .closeIconContainer {
-  width: var(--li-icn-width);
-  height: var(--li-icn-height);
+  width: var(--em-li-icn-width);
+  height: var(--em-li-icn-height);
   cursor: pointer;
 }
 
@@ -156,18 +156,18 @@
 }
 
 .applyButton {
-  background-color: var(--background-default);
+  background-color: var(--em-background-default);
   width: 100%;
   position: sticky;
   bottom: 0;
   border: none;
-  border-radius: var(--li-radius);
-  color: var(--li-label-color-default);
+  border-radius: var(--em-li-radius);
+  color: var(--em-li-label-color-default);
   cursor: pointer;
-  font-family: var(--li-label-family);
-  font-size: var(--li-label-size);
-  font-weight: var(--li-label-weight);
-  height: var(--li-height);
+  font-family: var(--em-li-label-family);
+  font-size: var(--em-li-label-size);
+  font-weight: var(--em-li-label-weight);
+  height: var(--em-li-height);
 }
 
 .applyButton:disabled {
