--- a/src/remarkable-ui/shared/CardHeader/index.module.css
+++ b/src/remarkable-ui/shared/CardHeader/index.module.css
@@ -2,7 +2,7 @@
     align-items: flex-start;
     align-self: stretch;
     display: flex;
-    gap: var(--card-header-gap);
+    gap: var(--em-card-header-gap);
     justify-content: space-between;
     max-width: 100%;
     width: 100%;
@@ -13,7 +13,7 @@
     display: flex;
     flex: 1 0 0;
     flex-direction: column;
-    gap: var(--card-header-content-gap);
+    gap: var(--em-card-header-content-gap);
 }
 
 .rightContent {
