--- a/src/remarkable-ui/shared/Description/index.module.css
+++ b/src/remarkable-ui/shared/Description/index.module.css
@@ -1,10 +1,10 @@
 .description {
-    color: var(--card-subtitle-color);
-    font-family: var(--card-subtitle-family);
-    font-size: var(--card-subtitle-size);
+    color: var(--em-card-subtitle-color);
+    font-family: var(--em-card-subtitle-family);
+    font-size: var(--em-card-subtitle-size);
     font-style: normal;
-    font-weight: var(--card-subtitle-weight);
-    line-height: var(--card-subtitle-line-height);
-    text-align: var(--card-subtitle-align);
+    font-weight: var(--em-card-subtitle-weight);
+    line-height: var(--em-card-subtitle-line-height);
+    text-align: var(--em-card-subtitle-align);
     width: 100%;
 }
